fix filter box getting cut off

--- a/src/pages/portfolio/PortfolioPage.css
+++ b/src/pages/portfolio/PortfolioPage.css
@@ -15,7 +15,7 @@
 }
 
 .filter-box.visible {
-  max-height: 360px;
+  max-height: 425px;
 }
 
 .filter-box-top {
